Update local description poit1

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
             <div class="step">
                 <h4>Step 1</h4>
                 <p>Register with a driving school to obtain a Learner's Driving License (LDL).</p>
+                <p> The first license you will need to obtain is the Learner’s Driving License (LDL, commonly known as 'L License'). To get this process started, you will need to register with a recognised driving institution or school near you. There are over 120 driving schools in Malaysia and a quick Google search, or a browse through this Malaysia driving schools list will help you identify the school near to you. Registration fees vary from school to school depends on package offers.</p>
             </div>
             <div class="step">
                 <h4>Step 2</h4>
